--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,15 @@ quarkus.datasource.jdbc.url=jdbc:h2:mem:default
 quarkus.datasource.db-kind=h2
 quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.sql-load-script=import.sql
+
+
+com.bbo.repository.FruityViceService/mp-rest/url=https://www.fruityvice.com
+
+
+quarkus.smallrye-health.root-path=/health
+
+mp.jwt.verify.publickey.location=https://raw.githubusercontent.com/redhat-developer-demos/quarkus-tutorial/master/jwt-token/quarkus.jwt.pub
+mp.jwt.verify.issuer=https://quarkus.io/using-jwt-rbac
+
+#set jwt expiration duration
+#com.developers.redhat.jwt.duration=3600
